不要コメント削除、「人工知能ななこ」に？を差し込み

--- a/talk/templates/ai-nanako.html
+++ b/talk/templates/ai-nanako.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/html5.js"></script>
 <![endif]-->
 <title>人工知能？ななこ</title>
-<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+<style id="style-1-cropbar-clipper">
 .en-markup-crop-options {
     top: 18px !important;
     left: 50% !important;
@@ -35,7 +35,7 @@
 
 <body>
 <header>
-<h1><img src="/static/images/head.png" alt="人工知能ななこ"></h1>
+<h1><img src="/static/images/head.png" alt="人工知能？ななこ"></h1>
 </header>
 
 <article id="talk">
